--- a/core/templates/core/tenxanalysis_detail.html
+++ b/core/templates/core/tenxanalysis_detail.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    {{analysis.input_type}} Analysis Information
+    Tenx Analysis Information
 {% endblock %}
 
 {% block body %}
