--- a/core/templates/core/tenxanalysis_list.html
+++ b/core/templates/core/tenxanalysis_list.html
@@ -16,7 +16,6 @@
         <thead>
             <tr>
                 <th>Analysis ID</th>
-                <th>Type</th>
                 <th>Jira Ticket</th>
                 <th>Version</th>
                 <th>Run Status</th>
@@ -26,20 +25,11 @@
         <tbody>
             {% for analysis in analyses %}
               <tr>
-                  <td><a href="{% url 'core:analysis_detail' pk=analysis.pk%}">{{ analysis }}</a></td>
-                  <td>{{ analysis.input_type }}</td>
+                  <td><a href="{% url 'tenx:tenxanalysis_detail' pk=analysis.pk%}">{{ analysis }}</a></td>
                   <td><a href="https://www.bcgsc.ca/jira/browse/{{analysis.jira_ticket}}">{{analysis.jira_ticket}}</a></td>
                   <td>{{ analysis.version }}</td>
                   <td>{{ analysis.run_status }}</td>
-
-                  {% if analysis.input_type == 'DLP' %}
-                  <td>{{ analysis.dlp_library }}</td>
-                  {% elif analysis.input_type == 'PBAL' %}
-                  <td>{{ analysis.pbal_library }}</td>
-                  {% elif analysis.input_type == 'TENX' %}
                   <td>{{ analysis.tenx_library }}</td>
-                  {% endif %}
-
               </tr>
             {% endfor %}
         </tbody>
